2009-11-05 Maximilien Cuony
    * Renamed namespaces
    * Putting back FireGPG result on the right
    * New options:download_key_without_asking,hide_the_wait_window,hide_key_server_confirmation,hide_key_operation_confirmation,hide_download_menu

2009-10-25 Maximilien Cuony
    * Fixing regression with signed and encrypted mail
    * Fixing problem with pgp blocks inside pgp blocks
    * Applied patch of AtesComp to improve OWA support.
    * Default keyserver set to pgp.mit.edu
    * If you click on the wait box for keyservers, she is closed.
    * Moving down by one position the FireGPG menu in downloads
    * Fixing a problem in default options
    * Gmail support working again..
    * Adding detection of gpg for x64 windows
    * Fixing problem with el and he locales

2009-09-26 Maximilien Cuony
    * 0.7.9 released !
    * Basque, Finnish, Galician added


2009-09-20 Maximilien Cuony
    * Fix problem dues to namespacing
    * Improved error messages
    * Gmail's improvements
    * Fix gmail issues

2009-09-19 Maximilien Cuony
    * Max version set to 3.6
    * Asking twice symetrical passwords
    * Fixing dates on signatures lists
    * Button to show fingerprints
    * New item in menu to check again a page for pgp block
    * Typo in mime decoder
    * Fixing problem with presistant security label of pgp block
    * FireGPG is now fully namespaced !

2009-07-29 Maximilien Cuony
    * 0.7.8 released !
    * Fix problem with files signs
    * Fix problem with hashes with  fx3.0

2009-07-28 Maximilien Cuony
    * Adding id & lv locates
    * Fix gmail problem
    * Fix problem with foward in gmail

2009-07-27 Maximilien Cuony
    * Adding some parameters to very for DTA

2009-07-26 Maximilien Cuony
    * 0.7.7 released !
    * New icon theme
    * FS#325

2009-07-21 Maximilien Cuony
    * New API system

2009-07-20 Maximilien Cuony
    * Work on api's security
    * Upgraded a part of the doc

2009-07-19 Maximilien Cuony