@@ -188,3 +188,4 @@ gmail_problem_title=El suport de Gmail sembla trencat.
 gmail_problem_detail=Detalls
 gmail_problem_status=Status's full
 gmail_problem_close=Tanca
+key_is_not_trusted=!Key isen\'t trusted!
