@@ -188,3 +188,4 @@ gmail_problem_title=Gmail euskarri dirudienez hondaturik dago
 gmail_problem_detail=Xehetasunak
 gmail_problem_status=Egoera orrialdea
 gmail_problem_close=Itxi
+key_is_not_trusted=!Key isen\'t trusted!
