@@ -188,3 +188,4 @@ gmail_problem_title=Gmail-støtte virker knekt
 gmail_problem_detail=Detaljer
 gmail_problem_status=Statusens side
 gmail_problem_close=Lukke
+key_is_not_trusted=!Key isen\'t trusted!
