@@ -188,3 +188,4 @@ gmail_problem_title=Поддержка Gmail не работает.
 gmail_problem_detail=Подробности
 gmail_problem_status=Страница статуса
 gmail_problem_close=Закрыть
+key_is_not_trusted=!Key isen\'t trusted!
