@@ -188,3 +188,4 @@ gmail_problem_title=Gmail support seems broken.
 gmail_problem_detail=Details
 gmail_problem_status=Status's page
 gmail_problem_close=Close
+key_is_not_trusted=!Key isen\'t trusted!
